<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey"
            tools:context=".view.fragments.PersonalInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdv_head_img"
                style="@style/fresco_oval"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_margin="16dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@color/colorAccent"
                        android:text="啊啊啊宇"
                        />

                    <ImageView
                        android:id="@+id/imv_level"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/ic_lv0"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="经验：50/100"/>

                <TextView
                    android:id="@+id/tv_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="积分：50"/>
            </LinearLayout>

        </LinearLayout>


        <include layout="@layout/layout_split_line"/>

        <RelativeLayout
            android:id="@+id/rl_nick_name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/personal_center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/ic_nick_name"
                android:text="@string/nick_name"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_right"/>
        </RelativeLayout>

        <include layout="@layout/layout_split_line"/>

        <RelativeLayout
            android:id="@+id/rl_modify_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/personal_center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/ic_invite_people"
                android:text="@string/modify_pwd"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_right"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_log_off"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/log_off"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</ScrollView>